[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vtjson"
dynamic = ["version"]
authors = [
  { name="Michel Van den Bergh", email="michel.vandenbergh@uhasselt.be" },
]
description = "A lightweight package for validating JSON like Python objects"
readme = "README.md"
dependencies = ["dnspython", "email_validator", "idna", "python-magic"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
py-modules = ["vtjson"]

[tool.setuptools.dynamic]
version = {attr = "vtjson.__version__"}

[project.urls]
"Homepage" = "https://github.com/vdbergh/vtjson"
"Bug Tracker" = "https://github.com/vdbergh/vtjson/issues"