[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vtjson"
dynamic = ["version"]
authors = [
  { name="Michel Van den Bergh", email="michel.vandenbergh@uhasselt.be" },
]
description = "An easy to use validation library compatible with Python type annotations"
readme = "README.md"
dependencies = ["dnspython", "email_validator", "idna", "python-magic", "typing_extensions"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
py-modules = ["vtjson"]

[tool.setuptools.dynamic]
version = {attr = "vtjson.__version__"}

[project.urls]
"Homepage" = "https://github.com/vdbergh/vtjson"
"Bug Tracker" = "https://github.com/vdbergh/vtjson/issues"